--- a/public/css/builder.main.css
+++ b/public/css/builder.main.css
@@ -7,7 +7,7 @@
     position:absolute;
     left:50%;
     margin-left:-500px;
-    top:50px;
+    top:70px;
 }
     #crnBar{
         font-family:Open Sans;
@@ -130,3 +130,41 @@
                 padding:10px 2px 10px 2px;
                 box-sizing: border-box;
             }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* top control bar styling */
+.b-toolIcon{
+    height:35px;
+    width:35px;    
+    background:url(/images/builderSprites.png) no-repeat;
+    background-size:105px 35px;
+    display:inline-block;
+    margin-left:15px;
+    cursor: pointer;
+}
