--- a/views/main/create.jade
+++ b/views/main/create.jade
@@ -45,12 +45,9 @@ block headContent
                     width:150px;
                     background:#3498db;
                     margin-top:50px;
-                    font-weight:600;
+                    font-weight:400;
                     border-radius:2px;
                     cursor:pointer;
-                    position:relative;
-                    left:50%;
-                    margin-left:-75px;
                 }
                 .clearfix:after {
                    content: " "; /* Older browser do not support empty content */
@@ -152,7 +149,9 @@ block bodyContent
             p(style="font-family:Open Sans;font-size:12px;font-weight:100;padding-left:100px;") Your Current Schedule Contains:
             ul#courseChoiceContainer(style="margin-left:100px;width:550px;padding-right:50px;float:left;")
             br
-            button#scheduleCreate(type="submit") Create Schedule
+            div(style="width:100%;text-align:center")
+                button#scheduleCreate(type="submit") Create Schedule
+                button#scheduleCreate(type="submit" style="margin-left:20px;background:#2ecc71") Show Reviews
 
 
     footer
