changed signup to CORE based

--- a/views/main/create.jade
+++ b/views/main/create.jade
@@ -76,6 +76,7 @@ block headContent
                         padding-left:10px;
                         cursor:pointer;
                         width:100%;
+                        box-sizing:border-box;
                     }
                         .instant-resultContainer-hover{
                             background-color:#89C4F4;
