ugh, design for review making me mad

--- a/views/main/create.jade
+++ b/views/main/create.jade
@@ -335,16 +335,16 @@ block bodyContent
                 if(chosenCourses.courseList.length==0)
                     return false;
                 var courseList  =   [];
-                chosenCourses.courseList=chosenCourses.courseList.map(function(e){
+                /*chosenCourses.courseList=chosenCourses.courseList.map(function(e){
                     courseList.push([e.code.split(/(\d)/).shift(),e.code.split(/(\d)/).splice(1).join('')]);
                     return e;
-                });
+                });*/
                 
                 if(chosenCourses.courseList.length>0)
                     localStorage['oldCourses']=chosenCourses.courseList.map(function(a){return a.code}).join('.');
                 else
                     localStorage['oldCourses']="";
-                document.location   =   '/s/show/?c='+JSON.stringify(courseList);
+                document.location   =   '/s/show/?c='+chosenCourses.courseList.join('|');
             },
             init:function(){
                 this.button.addEventListener('click',this.submit)
