course instant works for newStruct

--- a/views/home.jade
+++ b/views/home.jade
@@ -23,7 +23,7 @@ html
             p(class="mainTitle")
                 img(src="/images/mainLogo.png" style="float:left;margin-top:5px;" height="50px")
                 |Schedular
-            p(class="subTitle") a clean, easy to use, course registration platform
+            p(class="subTitle") a course planning platform for all people
             p(class="subTitle") now in UFV 
             a(href="/u/signup")
                 button(id="callToAction") Sign Me Up!
