--- a/views/user/profile.jade
+++ b/views/user/profile.jade
@@ -3,8 +3,8 @@ block headContent
 	link(rel="stylesheet" href="/css/profile.main.css")
 block bodyContent
 	div(id="contentContainer")
-		div(id="p-nameContainer") Fatty McFattyPants
-			div(id="p-nameCallToAction") (Vicky Zhang is gay)
+		div(id="p-nameContainer") Barack Obama
+			div(id="p-nameCallToAction") (Click here to add your real name)
 		//button(id="p-passChange") Change My Password
 		//button(id="p-passChange") Change My Privacy 
 		div(id="p-infoContainer")
@@ -26,3 +26,6 @@ block bodyContent
 			p(class="p-infoSection") 
 				label(class="p-infoSectionHead") major:
 				label(class="p-infoSectionBody") Political Science
+		p(id="p-currentScheduleTitle") My Current Course Schedule
+		div(id="p-scheduleContainer")
+		
