--- a/public/css/profile.main.css
+++ b/public/css/profile.main.css
@@ -1,14 +1,14 @@
 #contentContainer{
 	height:100%;
-	width:1000px;
+	width:900px;
 	position:absolute;
 	top:100px;
 	left:50%;
-	margin-left:-500px;
+	margin-left:-450px;
 }
 
 	#p-nameContainer{
-		font-size:50px;
+		font-size:40px;
 		font-weight:100;
 		font-family:Open Sans;
 	}
@@ -33,7 +33,7 @@
 		width:300px;
 		height:200px;
 		float:right;
-		font-size:12px;
+		font-size:13px;
 		padding:10px;
 		font-family:Raleway;
 		color:#000;
@@ -68,3 +68,16 @@
 				font-weight:300;
 				line-height: 20px;
 			}
+
+
+#p-scheduleContainer{
+	height:400px;
+	width:400px;
+	border:1px solid #DDD;
+}
+	#p-currentScheduleTitle{
+	margin-top:100px;
+		font-size:12px;
+		font-weight:300;
+		font-family: Open Sans;
+	}
