--- a/views/auth/forgot.jade
+++ b/views/auth/forgot.jade
@@ -15,7 +15,7 @@ html
                 span(class="u-largeLogoText") Reset 
                 img(class="u-largeLogoImage" src="/images/mainLogo.png") 
             div(id="notificationContainer")
-            input(class="u-signInput" id="u-student" placeholder="Your Student Number")
+            input(class="u-signInput" id="u-student" placeholder="Your Student Email")
             br
             a(class="u-forgotLink" href="/u/login") Login
             br
