--- a/views/main/create.jade
+++ b/views/main/create.jade
@@ -15,7 +15,7 @@ block bodyContent
         #centerContainer
             p#mainTitle Your Courses
             input#courseInput(type="text",placeholder="Enter your courses, e.g. Academic Writing, ENGL105")
-            div#instantDropDown
+            div#instantDropDown(style="display:none")
             br
             br
             p(style="font-family:Open Sans;font-size:12px;font-weight:100;padding-left:100px;") Your Current Schedule Contains:
