--- a/views/user/profile.jade
+++ b/views/user/profile.jade
@@ -26,6 +26,7 @@ block bodyContent
 			p(class="p-infoSection") 
 				label(class="p-infoSectionHead") major:
 				label(class="p-infoSectionBody") Political Science
+			div(style="font-size:12px;font-weight:100;font-family:Open Sans;padding:10px;border:1px solid #DDD;float:left;margin:10px;cursor:pointer;") Change Privacy
+			div(style="font-size:12px;font-weight:100;font-family:Open Sans;padding:10px;border:1px solid #DDD;float:left;margin:10px;cursor:pointer;") Add More Info
 		p(id="p-currentScheduleTitle") My Current Course Schedule
 		div(id="p-scheduleContainer")
-		
