--- a/public/css/create.main.css
+++ b/public/css/create.main.css
@@ -1,3 +1,6 @@
+body{
+overflow-y:scroll;
+}
 #mainContent{
 		height:100%;
 		width:1000px;
@@ -61,10 +64,11 @@
 		opacity: 1 !important;
 		}
 				#instantDropDown{
-						width:100px;
-						border:1px solid #BBB;
-						display: none;
-						top:-1px;
+					position:relative;
+					left:100px;
+					width:620px;
+					border:1px solid #BBB;
+					top:-1px;
 				}
 						.instant-resultContainer{
 								padding:7px;
@@ -72,8 +76,9 @@
 								cursor:pointer;
 								width:100%;
 								box-sizing:border-box;
+								position:relative;
 						}
-								.instant-resultContainer-hover{
+								.instant-resultContainer:hover{
 										background-color:#89C4F4;
 								}
 								.instant-resultCourseName{
@@ -96,26 +101,26 @@
 										list-style-type:none;
 										display:block;
 								}
-								.courseChoice{
-										padding:10px;
-										border-radius:30px;
-										border:1px solid #000;
-										font-family:Open Sans;
-										font-size:12px;
-										font-weight:300;
-										display:block;
-										float:left;
-										margin:3px;
-								}
-								.courseKill{
-										background:url(/images/kill.png) center center no-repeat;
-										height:16px;
-										width:16px;
-										float:left;
-										display:inline-block;
-										margin-right:5px;
-										cursor:pointer;
-								}
+									.courseChoice{
+											padding:10px;
+											border-radius:30px;
+											border:1px solid #000;
+											font-family:Open Sans;
+											font-size:12px;
+											font-weight:300;
+											display:block;
+											float:left;
+											margin:3px;
+									}
+										.courseKill{
+												background:url(/images/kill.png) center center no-repeat;
+												height:16px;
+												width:16px;
+												float:left;
+												display:inline-block;
+												margin-right:5px;
+												cursor:pointer;
+										}
 				.seasonToolTip{
 						font-family:Open Sans;
 						font-size:12px;
