--- a/public/css/home.css
+++ b/public/css/home.css
@@ -7,6 +7,8 @@
     margin-top:0;
     padding-top: 0;
     line-height:60px;
+		width:300px;
+		height:60px;
 }
     .subTitle{
         font-size:14px;
