Fixed top bar, don't use min-width

--- a/views/home.jade
+++ b/views/home.jade
@@ -9,17 +9,17 @@ html
 		meta(name="viewport" content="width=device-width,height=device-height,initial-scale=1")
 		title="Schedular.io"
 	body
-		div(style="min-width:1000px;position:relative;top:0px;left:50%;margin-left:-500px;margin-top:20px;font-family:Open Sans;font-size:12px;")
+		div(style="width:1000px;position:relative;top:0px;left:50%;margin-left:-500px;margin-top:20px;font-family:Open Sans;font-size:12px;")
 			a(href="/contact")
 				div(href="/contact" id="contactButton" style="color:#000;float:left;font-family:Open Sans;font-weight:300;font-size:12px;margin-top:25px;cursor:pointer;") Contact
 			a(href="/mission")
 				div(href="/mission" id="donateButton" style="color:#000;float:left;margin-left:40px;font-family:Open Sans;font-weight:300;font-size:12px;margin-top:25px;cursor:pointer;") Mission
 			a(href="/donate")
 				div(href="/donate" id="donateButton" style="color:#000;float:left;margin-left:40px;font-family:Open Sans;font-weight:300;font-size:12px;margin-top:25px;cursor:pointer;") Donate
-		div(href="/u/login" id="loginMain")
-			div(style="font-family:Open Sans;font-size:12px;font-weight:300;")
-				a(href="/u/login")
-					span(class="subTitle" id="loginText") Login
+			div(href="/u/login" id="loginMain")
+				div(style="font-family:Open Sans;font-size:12px;font-weight:300;")
+					a(href="/u/login")
+						span(class="subTitle" id="loginText") Login
 		div(id="mainContainer" )
 			div(class="mainTitle")
 				img(src="/images/mainLogo.png" style="float:left" height="50px")
