--- a/views/main/show.jade
+++ b/views/main/show.jade
@@ -241,7 +241,7 @@ block bodyContent
     div#main-scheduleContainer
     div#yo
     //Okay, if you're reading this HTML looking for hacks or something I suggest you look at the file below.
-    script(src='/js/show.main.js')
+    script(src='/js/show.main.2.0.js')
     //Yea, I'm talking about ^ that file. It contains all the scripts for the page you see in front of you.
     
     //--Templates--
