--- a/public/css/create.main.css
+++ b/public/css/create.main.css
@@ -1,5 +1,5 @@
 body{
-overflow-y:scroll;
+	overflow-y:scroll;
 }
 #mainContent{
 		height:100%;
@@ -58,11 +58,7 @@ overflow-y:scroll;
 						color:inherit;
 						outline:0;
 						text-decoration:none;
-						}
-						::-webkit-input-placeholder { /* WebKit browsers */
-		color:    #888;
-		opacity: 1 !important;
-		}
+					}
 				#instantDropDown{
 					position:relative;
 					left:100px;
@@ -111,23 +107,42 @@ overflow-y:scroll;
 											display:block;
 											float:left;
 											margin:3px;
+										background-color:#FFF;
 									}
 										.courseKill{
 												background:url(/images/kill.png) center center no-repeat;
-												height:16px;
-												width:16px;
+												height:15px;
+												width:15px;
 												float:left;
 												display:inline-block;
 												margin-right:5px;
+												margin-top:1px;
+												background-size:100%;
 												cursor:pointer;
 										}
-				.seasonToolTip{
-						font-family:Open Sans;
-						font-size:12px;
-						font-weight:100;
-						color:#FFF;
-						background-color:#2c3e50;
-						padding:5px;
-						border-radius:3px;
-						position:absolute;
-				}
+
+
+#termContainer{
+	margin-left:30px;
+	margin-top:120px;
+	height:50px;
+	z-index:100;
+	width:800px;
+	position:absolute;
+	left:50%;
+	margin-left:-400px;
+}
+.seasonIcon{
+	height:42px;
+	width:42px;
+	padding:5px;
+	box-sizing:border-box;
+	border:1px solid #BBB;
+	float:left;
+	cursor:pointer;
+	margin-left:2px;
+	opacity:0.1
+}
+	.activeTermIcon{
+		opacity: 1;
+	}
