--- a/public/css/home.css
+++ b/public/css/home.css
@@ -54,6 +54,8 @@
         padding:10px;
         border:1px solid #3498db;
         margin-top:20px;
+				border-radius:5px;
+				color:#3498db;
         transition:background .25s, border .25s;
     }
         #loginText:hover{
