--- a/public/css/show.main.css
+++ b/public/css/show.main.css
@@ -232,13 +232,13 @@ border-width: 1px 0 0;
                     font-family:Open Sans;
                     font-weight:400;
                     font-size:12px;
-                    border:1px solid #999;
+                    border:1px solid transparent;
                     padding:5px;
                     width:150px;
                     border-radius: 2px;
                     cursor: pointer;
                     padding-left: 30px;
-                    background:url(/images/downArrow.png) center left 5px no-repeat;
+                    background:url(/images/downArrow.png) #DDD center left 5px no-repeat;
                     background-size:20px;
                     cursor: pointer;
                     float:left;
