--- a/public/css/templateCSS.css
+++ b/public/css/templateCSS.css
@@ -7,7 +7,9 @@
     user-select: none;
 }
 
-
+body{
+	background:#fff;
+}
 
 
     #navbar{
@@ -17,7 +19,8 @@
         width:100%;
         height:50px;
         border-bottom:1px solid #eee;
-        z-index:1000;
+        z-index:1000;;
+			box-shadow: 0px 0px 1px #EEE;
     }
     #innerNavbar{
         position:absolute;
@@ -32,7 +35,7 @@
             display:inline-block;
         }
             #logo{
-                background:url(/images/mainLogo.png) center center no-repeat;
+                background:url(/images/mainLogo-25px.png) center center no-repeat;
                 width:50px;
                 height:50px;
                 float:left;
@@ -112,3 +115,22 @@
                 outline:0;
                 text-decoration:none;
             }
+
+
+
+
+
+
+
+/* Tool tip styles */
+
+	.gTT-pop{
+			font-family:Open Sans;
+			font-size:12px;
+			font-weight:100;
+			color:#FFF;
+			background-color:#2c3e50;
+			padding:5px;
+			border-radius:3px;
+			position:absolute;
+	}
