--- a/public/css/userGlobal.css
+++ b/public/css/userGlobal.css
@@ -75,11 +75,11 @@
 			font-family:Open Sans;
 			font-size:12px;
 			width:100%;
-			padding:10px;
+			padding:15px;
 			box-sizing: border-box;
-			margin-top:20px;
+			margin-top:0px;
 			color:#FFF;
-			background-color:#1abc9c;
+			background-color:#1ABEEE;
 			display: none;
 			margin-bottom:10px;
     }
