--- a/public/css/create.main.css
+++ b/public/css/create.main.css
@@ -28,7 +28,7 @@ body{
 						margin-left:-300px;
 						left:50%;
 						padding:10px;
-						border:1px solid #DDD;
+						border:1px solid #AAA;
 						font-family:Open Sans;
 						outline:0;
 						font-weight:300;
