--- a/public/css/templateCSS.css
+++ b/public/css/templateCSS.css
@@ -13,14 +13,14 @@ body{
 
 
     #navbar{
-        position:absolute;
-        top:0px;
-        left:0px;
-        width:100%;
-        height:45px;
-        border-bottom:1px solid #eee;
-        z-index:1000;;
-			box-shadow: 0px 0px 1px #EEE;
+			position:absolute;
+			top:0px;
+			left:0px;
+			width:100%;
+			height:45px;
+			margin-top:10px;
+			z-index:1000;;
+			box-shadow: 0px 0px 1px #CCC;
     }
     #innerNavbar{
         position:absolute;
