--- a/public/css/templateCSS.css
+++ b/public/css/templateCSS.css
@@ -19,7 +19,7 @@ body{
 			width:100%;
 			height:45px;
 			margin-top:10px;
-			z-index:1000;;
+			z-index:1000;
 			box-shadow: 0px 0px 1px #CCC;
     }
     #innerNavbar{
