--- a/public/css/show.main.css
+++ b/public/css/show.main.css
@@ -11,11 +11,12 @@ body{
     width:1000px;
     position: relative;
     top:0px;
-    margin-left:-540px;
+    margin-left:-500px;
     left:50%;
     display:inline-block;
     padding-top:10px;
     padding:30px;
+	box-sizing: border-box;
 }
 
 
@@ -48,6 +49,7 @@ border-width: 1px 0 0;
     width:100%;
     float:left;
     padding:10px;
+	box-sizing: border-box;
 }
     .s-scheduleWrap{
         border:1px solid #DDD;
@@ -68,7 +70,6 @@ border-width: 1px 0 0;
                 padding-left:0px;
                 padding-right:0px;
                 font-size:12px;
-                border-left:1px solid #eee;
                 width:70px;
                 text-align:center;
             }
@@ -110,9 +111,10 @@ border-width: 1px 0 0;
                 color:#000;
                 font-size:12px;
                 font-weight:100;
-                border-top:1px solid #DDD;
+                border-top:1px solid #f9f9f9;
                 left:0px;
                 padding:2px;
+								padding-top: 5px;
             }
 
 .r-ratingWrap{
@@ -145,7 +147,7 @@ border-width: 1px 0 0;
     font-size:12px;
     font-weight:300;
     padding:10px;
-    background-color:#2ecc71;
+    background-color:#3ABCD5;
     color:#FFF;
     border:0;
     border-radius:2px;
