--- a/views/main/show.jade
+++ b/views/main/show.jade
@@ -211,21 +211,21 @@ block bodyContent
 		
 		
 		//--Templates--
-		div(class="possibleContainer" id="scheduleWrapTemplate" )
+		div(class="possibleContainer" style="float:right" id="scheduleWrapTemplate" )
 			//This below is the template for ratings
 			div(class="r-ratingWrap")
 				div(class="r-averageRatingTitle") Average Rating:
-			div(class="r-ratingContainer")
-			button(data-crn="11257" class="s-useMeButton" title="Use This Schedule") Use This Schedule
+				div(class="r-ratingContainer")
+					button(data-crn="11257" class="s-useMeButton" title="Use This Schedule") Build This
 
 			div(class="s-scheduleWrap" data-crn="")
 				div(class="s-dayLabelWrap")
 					each day in [' ','Sunday','Monday','Tuesday','Wednesday','Thursday','Friday','Saturday']
 						div(class="s-dayLabel")=day
-					br
+				br
 				div(class="s-timeLabelWrap")
-				each time, index in ['8:00 am','9:00 am','10:00 am','11:00 am','12:00 am','1:00 pm','2:00 pm','3:00 pm','4:00 pm','5:00 pm','6:00 pm','7:00 pm','8:00 pm','9:00 pm']
-					div(class="s-timeLabel" style="top:"+((index*30)-1)+'px')=time
+					each time, index in ['8:00 am','9:00 am','10:00 am','11:00 am','12:00 am','1:00 pm','2:00 pm','3:00 pm','4:00 pm','5:00 pm','6:00 pm','7:00 pm','8:00 pm','9:00 pm']
+						div(class="s-timeLabel" style="top:"+((index*30)-1)+'px')=time
 
 				div(class="s-timeBlockWrap")
 		//This is the template for the actual schedule
