--- a/views/main/show.jade
+++ b/views/main/show.jade
@@ -40,45 +40,6 @@ block bodyContent
 		br
 		br
 		div(id="lowerControls" style="float:right;overflow:hidden;display:block;width:100%;background-color:#fff;border-bottom:1px solid #f9f9f9;padding-top:20px;height:150px;box-shadow:0px 0px 4px #DDD ;")
-			style.
-
-				.sliderContainer{
-					height:70px;
-					width:10px;
-					margin-left:20px;
-					margin-right:20px;
-					margin-top:14px;
-					text-align: center;
-					position: relative;
-					float: left;
-				}
-
-				.sliderBlock{
-					height:84px;
-					width:2px;
-					background-color:#99E21D;
-					margin-left:6px;
-				}
-				.sliderCircle{
-					height:14px;
-					width:14px;
-					border-radius:14px;
-					box-shadow: 0px 0px 3px #999;
-					background-color:#FFF;
-					position:absolute;
-					cursor: pointer;
-				}
-
-				.arrow-left {
-					width: 0; 
-					height: 0; 
-					border-top: 10px solid transparent;
-					border-bottom: 10px solid transparent; 
-					border-right:10px solid #34495e; 
-					position:absolute;
-					top:0px;
-					left:-5px;
-				}
 			div(id="sliderControls" style="float:left;position:relative;padding-right:100px;")
 				div(id="toolTip" style="z-index:10000;top:0px;left:0px;display:none;padding:3px 5px 3px 5px;background:#34495e;float:left;position:absolute;color:#FFF;font-weight:300;font-family:Open Sans;font-size:11px;")
 					div(class="arrow-left")
@@ -215,7 +176,8 @@ block bodyContent
 			div(class="r-ratingWrap")
 				div(class="r-averageRatingTitle") Average Rating:
 				div(class="r-ratingContainer")
-					button(data-crn="11257" class="s-useMeButton" title="Use This Schedule") Build This
+					button(data-crn="11257" class="s-useMeButton" style="background-color:#2c3e50;" title="Modify This Schedule") Modify
+					button(data-crn="11257" class="s-useMeButton" style="margin-left:10px;background-color:#8e44ad" title="Save This Schedule") Save
 
 			div(class="s-scheduleWrap" data-crn="")
 				div(class="s-dayLabelWrap")
