--- a/views/MainTemplate.jade
+++ b/views/MainTemplate.jade
@@ -2,6 +2,7 @@ doctype html
 html
 	head
 		script(src='https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js')
+		script(src='https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.ui.min.js')
 		script(src="https://cdn.socket.io/socket.io-1.3.7.js")
 		script(src="/js/global.js")
 		link(href='https://fonts.googleapis.com/css?family=Open Sans:600,400,100,300' rel='stylesheet')
