--- a/views/main/show.jade
+++ b/views/main/show.jade
@@ -39,7 +39,7 @@ block bodyContent
 		br
 		br
 		br
-		div(id="lowerControls" style="float:right;overflow:hidden;display:block;width:100%;background-color:#fff;border-bottom:1px solid #f9f9f9;padding-top:20px;height:150px;")
+		div(id="lowerControls" style="float:right;overflow:hidden;display:none;width:100%;background-color:#fff;border-bottom:1px solid #f9f9f9;padding-top:20px;height:150px;box-shadow:0px 0px 4px #DDD;")
 			div(id="sliderControls" style="float:left;position:relative;padding-right:100px;")
 				div(id="toolTip" style="z-index:10000;top:0px;left:0px;display:none;padding:3px 5px 3px 5px;background:#34495e;float:left;position:absolute;color:#FFF;font-weight:300;font-family:Open Sans;font-size:11px;")
 					div(class="arrow-left")
@@ -77,11 +77,11 @@ block bodyContent
 						input(type="checkbox" class="customCheck customCheckbox-checked" data-uniqID="CLEAR" data-keep="class data-uniqID checked" checked="true")
 					td(class="campusFilter-box") 
 						input(type="checkbox" class="customCheck customCheckbox-checked" data-uniqID="ONL" data-keep="class data-uniqID checked" checked="true")
-						
-
+		
 		script.
+			(function(){
 			var times   =   ['8:00 am','8:30 am','9:00 am','9:30 am','10:00 am','10:30 am','11:00 am','11:30 am','12:00 am','12:30 am','1:00 pm','1:30 pm','2:00 pm','2:30 pm','3:00 pm','3:30 pm','4:00 pm','4:30 pm','5:00 pm','5:30 pm','6:00 pm','6:30 pm','7:00 pm','7:30 pm','8:00 pm','8:30 pm','9:00 pm','9:30 pm','10:00 pm'];
-			Object.prototype.listen	=	function(listeners){
+			Node.prototype.listen	=	function(listeners){
 				for(var types in listeners){
 					this.addEventListener(types,listeners[types]);
 				}
@@ -168,7 +168,7 @@ block bodyContent
 				
 			});
 		
-		
+			})();
 		
 		//--Templates--
 		div(class="possibleContainer" style="float:right;margin-top:20px;" id="scheduleWrapTemplate" )
